# AI-Video-editor

./: .env  main.py  package-lock.json  pyproject.toml
app/routes/: edit.py
app/services/: video_edit.py
attached_assets/: Pasted-Replit-Agent-Prompt-AI-Video-Editor-MVP-Single-Repl-API-Links-Hobbyist-Deploy-Plan-Goal-1754912311266_1754912311266.txt  Replit Agent Prompt — AI Video Edit_1754912341143.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ChatInterface.tsx  UploadForm.jsx  VideoPreview.tsx  VideoUpload.tsx
frontend/src/utils/: api.js
