[tool.poetry]
package-mode = false
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
fastapi = "^0.112.0"
uvicorn = "0.23.2"
httpx = "^0.28.1"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
ffmpeg-python = "^0.2.0"
requests = "^2.32.4"
python-multipart = "^0.0.20"
moviepy = {git = "https://github.com/Zulko/moviepy.git"}

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"